--- a/css/src/voice-search.scss
+++ b/css/src/voice-search.scss
@@ -11,19 +11,19 @@
 	input {
 		margin: 0;
 	}
+}
 
-	button {
-		position: absolute;
-		top: 0;
-		right: 0;
-		height: 30px !important;
-		width: 30px !important;
-		margin: 0;
-		border: 0;
-		padding: 0 !important;
-		background: none !important;
-		font: 0/0 a !important;
-	}
+.voice-search-button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 30px !important;
+	width: 30px !important;
+	margin: 0;
+	border: 0;
+	padding: 0 !important;
+	background: none !important;
+	font: 0/0 a !important;
 }
 
 .voice-search-mic,
