Complete rewrite using the `grunt-wp-plugin` boilerplate

--- a/css/src/voice-search.scss
+++ b/css/src/voice-search.scss
@@ -1,7 +1,9 @@
 /**
- * Voice Search Input Styling.
+ * Voice Search
+ * https://spinpress.com/wordpress-web-speech-api/
  *
- * Adds a microphone to the search input field.
+ * Copyright (c) 2015 Pascal Birchler
+ * Licensed under the GPLv2+ license.
  */
 
 .voice-search-wrapper {
